Mapper + 1 request
All API mappers implemented but not all their functionalities,

Request:
 - Patch League
